--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
    <div class="container">
-     <h1>Servus, this is Carolina
+      <h1>Servus, this is Carolina</h1>
      <img id="kitty"
-      src="./images/grad.jpg"
+      src="./images/kitty.jpg"
       alt="Graduation picture of Carolina"/></h1>
     <div class="btn-container">
      <p>Originally from Bavaria I now live in beautiful Amsterdam. <i class="fa fa-bicycle" aria-hidden="true"></i></p>
