--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
    <div class="container">
-      <h1>Servus, this is Carolina</h1>
+     <h1>Servus, this is Carolina</h1>
      <img id="kitty"
       src="./images/kitty.jpg"
-      alt="Graduation picture of Carolina"/></h1>
+      alt="Kitty picture"/>
     <div class="btn-container">
      <p>Originally from Bavaria I now live in beautiful Amsterdam. <i class="fa fa-bicycle" aria-hidden="true"></i></p>
      <p><strong>Why am I part of this workshop?</strong> It is my goal to work as a growth hacker who knows how to manage frontend.</p>
@@ -38,7 +38,8 @@
         <li><a href="https://www.linkedin.com/in/carolinartmann/" target="_blank">LinkedIn</a></li>
         <li><a href="https://www.meetup.com/de-DE/members/303584210/"target="_blank">MeetUp profile</a></li>
      </ul>
-   </div></div>
+   </div>
+</div>
 
    <div>
       <h2>Follow Me</h2>
@@ -54,7 +55,6 @@
         </li>
       </ul>
     </div>
-    </div>
-
+</div>
 </body>
 </html>
