--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       alt="Kitty picture"/>
     <div class="btn-container">
      <p>Originally from Bavaria I now live in beautiful Amsterdam. <i class="fa fa-bicycle" aria-hidden="true"></i></p>
-     <p><strong>Why am I part of this workshop?</strong> It is my goal to work as a growth hacker who knows how to manage frontend.</p>
+     <p><strong>Why am I part of this workshop?</strong><br />
+        It is my goal to work as a growth hacker who knows how to manage frontend.</p>
     </div>
     <div class="btn-container">
    <a href="#" class="btn">Discover more</a>
